--- a/calender/calender.css
+++ b/calender/calender.css
@@ -11,7 +11,7 @@ body {
 #link-div {
   width: 15%;
   position: fixed;
-  background-color: #2c3e50;
+  background-color: #d5d8dc;
   height: 100%;
   color: rgb(235, 231, 235);
   padding-left: 20px;
@@ -42,4 +42,7 @@ nav {
 }
 a {
   text-decoration: none;
+}
+aside {
+  width: 202px;
 }
