--- a/login.css
+++ b/login.css
@@ -15,7 +15,7 @@ body {
 }
 .container {
   display: grid;
-  grid-template-columns: 60% 40%;
+  grid-template-columns: 2fr 1fr;
   gap: 20px;
   width: 90%;
   margin: auto;
@@ -35,10 +35,10 @@ body {
   border-radius: 7px;
 }
 .right h1 {
-  border-top-right-radius: 6px;
-  border-top-left-radius: 6px;
-  background-color: #f2f5fa;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding-bottom: 10px;
+  padding-top: 10px;
 }
 .right .signupOpt {
   display: grid;
@@ -87,15 +87,13 @@ body {
 }
 .form input {
   width: 90%;
-  padding: 8px;
-  border-top: none;
+
   border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
-    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
-    rgba(0, 0, 0, 0.07) 0px 16px 16px;
   font-size: medium;
   margin-left: 5px;
-  /* background-color: #F2F5FA; */
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 4px;
 }
 .form {
   width: 80%;
@@ -137,14 +135,15 @@ body {
   font-size: 22px;
   padding: 5px 20px;
   border-radius: 6px;
-  border: 4px solid grey;
-  border-top: none;
-  border-bottom: none;
+  border: 4px solid none;
+  background-color: #b4b4b4;
 }
 .signupLink a {
   text-decoration: none;
 }
-/* ++++++++++++++++++++++++ */
+.signupLink {
+  text-align: center;
+}
 .first {
   display: flex;
   flex-direction: column;
@@ -184,8 +183,36 @@ body {
   width: 1.2em;
   /* border: 2px solid; */
 }
-@media screen and (max-width: 900px) {
+@media (max-width: 768px) {
   .left {
     display: none;
+  }
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 80%;
+    margin: auto;
+    align-items: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    width: 60%;
+    margin: auto;
+  }
+
+  .first p i {
+    font-size: 34px;
+  }
+  .right h1 {
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding-bottom: 6px;
+    padding-top: 6px;
+    font-size: 16px;
   }
 }
