--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  width: 100%;
 }
 
 .logo {
   width: 30%;
 }
-nav {
+.nav {
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: #2c3e50;
@@ -18,6 +19,8 @@ nav {
 }
 .signIn_register_button {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .signInBtn,
 .RegiterBtn {
@@ -26,6 +29,8 @@ nav {
   height: 36px;
   margin-right: 30px;
   border: none;
+  font-size: 16px;
+  padding: 8px;
 }
 .features {
   text-align: center;
@@ -43,13 +48,18 @@ nav {
   font-size: 24px;
 }
 .report_analysis {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 4px;
   margin-top: 60px;
   margin-bottom: 60px;
 }
-.report_analysis > div {
-  padding-left: 30px;
+
+.report_container {
+  width: 70%;
+  margin: 0 auto;
+  margin-bottom: 120px;
+  margin-top: 120px;
 }
 .time_tracking {
   display: flex;
@@ -80,29 +90,100 @@ nav {
   border-radius: 8px;
   border: none;
 }
-footer {
+.footer {
   display: flex;
   justify-content: center;
   background-color: #2c3e50;
   color: #fff;
   font-size: 16px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-footer > div {
-  margin-right: 150px;
-  margin-left: 150px;
+.footer > div {
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 8px;
   font-size: 20px;
 }
-footer > div > div {
+.footer > div > div {
   padding-top: 4px;
   padding-bottom: 4px;
   font-size: 20px;
 }
-.time_tracking_image {
-  width: 800px;
-}
+
 .time_tracking_image img {
   width: 100%;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .signIn_register_button {
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+  }
+  .signInBtn,
+  .RegiterBtn {
+    background-color: #abb2b9;
+    border-radius: 4px;
+    height: 24px;
+    margin-right: 10px;
+    border: none;
+    font-size: 12px;
+    padding: 8px;
+  }
+
+  .features_quote_1 {
+    font-size: 50px;
+  }
+  .features_quote_2 {
+    font-size: 20px;
+  }
+  .featureQuoteBtn {
+    height: 60px;
+    width: 20%;
+    border-radius: 6px;
+    font-size: 16px;
+  }
+
+  .report_analysis,
+  .features {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .report_container {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .time_tracking_image {
+    width: 100%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .signIn_register_button {
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+  }
+
+  .report_analysis,
+  .features {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .report_container {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .time_tracking_image {
+    width: 100%;
+  }
 }
